# time-qwen

./: README.md  pyproject.toml
demo/: data_exploration.py  final_model.py  hyperparameter_tuning.py  small_model.py  untrained_inference.py  varying_context_window.py
qwen_lora/: lora_linear.py  model.py
qwen_lora/utility/: flops.py  processing.py
report/: appendix.tex  discussion.tex  intro.tex  main.tex  method.tex  references.bib
